# frand-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  Trunk.toml
api/: .env.example  .env.test.example  Cargo.toml  Dockerfile  README.md
api/src/: config.rs  db.rs  error.rs  lib.rs  logger.rs  main.rs  response.rs
api/src/handlers/: health.rs  memo.rs  mod.rs  root.rs
api/src/models/: health.rs  item.rs  memo.rs  mod.rs  user.rs
api/src/mongodb/: mod.rs
api/src/routes/: health.rs  items.rs  mod.rs  root.rs  users.rs
api/src/services/: db.rs  mod.rs
api/tests/: health.rs  items_test.rs  memo.rs  root.rs  root_test.rs  test_health.rs  test_users.rs  test_util.rs
api/tests/common/: mod.rs
api/tests/test_common/: mod.rs
common/: Cargo.toml  README.md
common/src/models/: user.rs
config/: default.toml  test.toml
deploy/: .env.example  README.md  api.Dockerfile  api.dockerfile  docker-compose.yml  gen_certs.sh  generate-certs.sh  nginx.dockerfile  yew.Dockerfile
deploy/certs/: gen_certs.sh
deploy/nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf.template  template_replace.sh
deploy/nginx/conf.d/: default.conf
docs/: README.md  guide_01.md  guide_02.md  guide_03.md  guide_04.md  spec.md  spec_01.md  spec_02.md  spec_03.md  spec_04.md
yew/: .env.example  Cargo.toml  README.md  Trunk.toml  index.html  style.css  trunk.toml
yew/src/: api.rs  lib.rs  main.rs  router.rs  types.rs
yew/src/components/: item_form.rs  item_list.rs  memo_form.rs  memo_list_item.rs  mod.rs
yew/src/hooks/: mod.rs  use_memo_api.rs
yew/src/models/: mod.rs
yew/src/pages/: home.rs  memo_edit.rs  memo_list.rs  mod.rs  not_found.rs
yew/static/: style.css
