[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["frand-nano <frand.nano@gmail.com>"]
license = "MIT"

[workspace]
resolver = "2"
members = ["api", "yew", "common"]
default-members = ["api"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"