[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
name = "api"
description = "frand API 서비스 핵심 구현"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
log = "0.4"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0"
thiserror = "2.0"
