[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
name = "frand-api"
description = "frand API 서비스 핵심 구현"

[dependencies]
frand-api-common = { path = "../common" }
anyhow = "1.0"
dotenvy = "0.15"
log = "0.4"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0"
thiserror = "2.0"
