[package]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
name = "frand-api"
description = "frand API 서비스 핵심 구현"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
frand-api-common = { path = "../common" }
anyhow = "1.0"
dotenvy = "0.15"
log = "0.4"
rocket = { version = "0.5", features = ["json"] }
simple_logger = "5.0"
thiserror = "2.0"
mongodb = "3.2"

[dev-dependencies]
serial_test = "3.2"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }