[package]
name = "yew_frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
gloo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
wasm-bindgen-futures = { workspace = true }